--- a/KeePass/KeePass.csproj
+++ b/KeePass/KeePass.csproj
@@ -19,6 +19,11 @@
     <PackageProjectUrl>http://srv-project01.hsf.local/henryk/keepass</PackageProjectUrl>
   </PropertyGroup>
 
+	<PropertyGroup>
+		<IncludeSymbols>true</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+	</PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
