--- a/nuget.config
+++ b/nuget.config
@@ -2,11 +2,16 @@
 <configuration>
     <packageSources>
         <add key="HSF_KeePass_Nuget_source" value="http://srv-project01.hsf.local/api/v4/projects/29/packages/nuget/index.json" />
+		<add key="HSF_Nuget_source" value="http://srv-project01.hsf.local/api/v4/projects/36/packages/nuget/index.json" />
     </packageSources>
     <packageSourceCredentials>
         <HSF_KeePass_Nuget_source>
             <add key="Username" value="HSFKeePassNuget" />
             <add key="ClearTextPassword" value="yhYW-D65ohBVBzHYT5k4" />
         </HSF_KeePass_Nuget_source>
+		<HSF_Nuget_source>
+            <add key="Username" value="nuget_main_rw" />
+            <add key="ClearTextPassword" value="Q93zJJusDpTtyccoxwNZ" />
+        </HSF_Nuget_source>
     </packageSourceCredentials>
 </configuration>
