--- a/KeePass/KeePass.csproj
+++ b/KeePass/KeePass.csproj
@@ -13,21 +13,22 @@
 
   <PropertyGroup>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <Version>1.0.13.1</Version>
-    <AssemblyVersion>1.0.13.1</AssemblyVersion>
-    <FileVersion>1.0.13.1</FileVersion>
+    <Version>1.0.13.2</Version>
+    <AssemblyVersion>1.0.13.2</AssemblyVersion>
+    <FileVersion>1.0.13.2</FileVersion>
     <PackageProjectUrl>https://github.com/quain24/KeePass</PackageProjectUrl>
   </PropertyGroup>
 
 	<PropertyGroup>
 		<IncludeSymbols>true</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
-		<PackageReleaseNotes>Fixed invalid repo address in nuget documentation.</PackageReleaseNotes>
+		<PackageReleaseNotes>Updated dependencies.</PackageReleaseNotes>
 		<RepositoryUrl>https://github.com/quain24/KeePass</RepositoryUrl>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
 		<PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
 		<NeutralLanguage>en</NeutralLanguage>
+		<PackageIcon>KeePass_icon.png</PackageIcon>
 	</PropertyGroup>
 
   <ItemGroup>
@@ -46,6 +47,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="..\KeePass_icon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
     <None Include="..\README.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
