--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,11 +9,21 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
+
 steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- task: NuGetCommand@2
+  inputs:
+    command: 'restore'
+    restoreSolution: '**/*.sln'
+    feedsToUse: 'select'
+    vstsFeed: 'b5c6bc0c-cc4b-4e58-8bd5-daab70b4a2c2'
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'build'
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'test'
