--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,21 +9,19 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- task: NuGetCommand@2
+- task: DotNetCoreCLI@2
   inputs:
     command: 'restore'
-    restoreSolution: '**/*.sln'
+    projects: '**/*.csproj'
     feedsToUse: 'select'
     vstsFeed: 'b5c6bc0c-cc4b-4e58-8bd5-daab70b4a2c2'
-
 - task: DotNetCoreCLI@2
   inputs:
     command: 'build'
+    projects: '**/*.csproj'
 - task: DotNetCoreCLI@2
   inputs:
     command: 'test'
+    projects: '**/KeePass.Tests/*.csproj'
+    testRunTitle: 'Standard test'
